fixed adaptability: there is no horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,16 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  /*position: absolute;*/
 }
 
-h1 {
-  font-size: 5rem;
-  margin: 0;
+html, body {
+  height: 100%;
 }
 
 * {
   box-sizing: border-box;
+
   font-size: 1rem;
   font-weight: 400;
   font-family: 'Roboto', sans-serif;
@@ -23,6 +24,10 @@ h1 {
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
+}
+
+h1 {
+  font-size: 5rem;
 }
 
 h2 {
